# VertexFEM

./: .gitignore  CMakeLists.txt
.github/: README.md
config/: CMakeLists.txt  cconfig.hpp  config.hpp
include/base/: error.hpp  mem_manager.hpp
include/linalg/: vector.hpp
include/utils/: bench.hpp
src/base/: mem_manager.cpp
src/utils/: bench.cpp
test/: CMakeLists.txt  gym.cpp
